--- a/package.json
+++ b/package.json
@@ -5,17 +5,29 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server -d --host 0.0.0.0"
+    "start": "node_modules/.bin/webpack-dev-server -d --host 0.0.0.0",
+    "build": "node_modules/.bin/webpack"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "gamebone": "latest",
-    "lodash": "^3.10.0",
-    "p2": "^0.7.0",
-    "pixi.js": "^3.0.6"
-  },
   "devDependencies": {
-    "babel-runtime": "^5.6.15"
+    "babel": "^6.3.26",
+    "babel-core": "^6.4.0",
+    "babel-loader": "^6.2.1",
+    "babel-polyfill": "^6.3.14",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-register": "^6.3.13",
+    "gamebone": "latest",
+    "imports-loader": "^0.6.5",
+    "lodash": "^3.10.0",
+    "mocha-loader": "^0.7.1",
+    "p2": "^0.7.0",
+    "pixi.js": "^3.0.6",
+    "sinon": "^1.17.2",
+    "sinon-chai": "^2.8.0",
+    "webpack": "^1.12.10",
+    "webpack-dev-server": "^1.14.0",
+    "webpack-notifier": "^1.2.1"
   }
 }
